<resources>
    <string name="app_name">To Do List</string>
    <string name="search_hint">Enter keywords</string>
    <string name="search_icon">Search icon</string>
    <string name="status">Status</string>
    <string name="order_by">Order by</string>
    <string name="enter_task">Enter task</string>
    <string name="enter_deadline">Enter deadline</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="reset_default">Reset Default</string>
    <string-array name="filter_status">
        <item>All</item>
        <item>Doing</item>
        <item>Done</item>
    </string-array>
    <string-array name="filter_order_by">
        <item>None</item>
        <item>Deadline</item>
    </string-array>
    <string-array name="filter_deadline">
        <item>All</item>
        <item>Today</item>
        <item>This Week</item>
        <item>This Month</item>
    </string-array>
    <string name="all">All</string>
    <string name="none">None</string>
    <string name="task">Task</string>
    <string name="msg_task_empty">Task field cannot be left blank !</string>
    <string name="msg_deadline_not_valid">Deadline field must be from today onwards</string>
    <string name="pick_deadline">Pick Deadline</string>
    <string name="msg_deadline_empty">Deadline field cannot be left blank</string>
    <string name="msg_task_added">Task added</string>
    <string name="warning">Warning</string>
    <string name="msg_confirm_delete_task">Are you sure you want to delete this task?</string>
    <string name="msg_task_deleted">deleted</string>
    <string name="msg_task_edited">edited</string>
    <string name="deadline">Deadline</string>
    <string name="filter_status_all">All</string>
    <string name="filter_status_doing">Doing</string>
    <string name="filter_status_done">Done</string>
    <string name="filter_order_by_none">None</string>
    <string name="filter_order_by_deadline">Deadline</string>
    <string name="filter_deadline_all">All</string>
    <string name="filter_deadline_Today">Today</string>
    <string name="filter_deadline_this_week">This Week</string>
    <string name="filter_deadline_this_month">This Month</string>
</resources>