<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintAdd"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edtAddTask"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/margin_y_lg"
        android:layout_marginEnd="@dimen/margin_end_dialog"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/enter_task"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/margin_x_lg"
        android:paddingEnd="@dimen/margin_x_lg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ivShowDeadline"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/margin_x_lg"
        android:layout_marginTop="@dimen/margin_y_lg"
        android:ems="10"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/margin_x_lg"
        android:paddingEnd="@dimen/margin_x_lg"
        android:textSize="@dimen/text_size_lg"
        app:layout_constraintEnd_toStartOf="@+id/btnPickDeadline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtAddTask" />

    <Button
        android:id="@+id/btnCancelAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_x_lg"
        android:text="@string/cancel"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/btnSubmitAddTask"
        app:layout_constraintTop_toTopOf="@+id/btnSubmitAddTask" />

    <Button
        android:id="@+id/btnSubmitAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_y_lg"
        android:layout_marginEnd="@dimen/margin_end_dialog"
        android:text="@string/submit"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivShowDeadline" />

    <Button
        android:id="@+id/btnPickDeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_end_dialog"
        android:text="@string/pick_deadline"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivShowDeadline" />
</androidx.constraintlayout.widget.ConstraintLayout>